@@ -71,6 +71,8 @@ struct Rconn {
     /* The idea here is that no MBCS char will ever not fit */
     char iconvbuff[25], oconvbuff[50], *next, init_out[25];
     short navail, inavail;
+    unsigned char *buff;
+    size_t buff_len, buff_stored_len, buff_pos;
     Rboolean EOF_signalled;
     Rboolean UTF8out;
     void *id;
